--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
         <i class="fas fa-user-graduate card-icon"></i>
         <h3 class="card-title">الطلاب المتفوقين</h3>
       </div>
-      <div class="card" style="animation-delay: 0.25s;" data-url="https://sites.google.com/view/drhfbtrh55/%D8%A8%D9%8A%D8%A7%D9%86-%D8%A8%D8%A7%D9%84%D8%B7%D9%84%D8%A7%D8%A8-%D8%A7%D9%84%D8%B6%D8%B9%D8%A7%D9%81-%D9%88%D8%A8%D8%B1%D8%A7%D9%85%D8%AC%D9%87%D9%86-%D8%A7%D9%84%D8%B9%D9%84%D8%A7%D8%AC%D9%8A%D8%A9?authuser=1">
+      <div class="card" style="animation-delay: 0.25s;" data-url="https://2u.pw/YNoFA">
         <i class="fas fa-user-friends card-icon"></i>
         <h3 class="card-title">الطلاب الضعاف</h3>
       </div>
@@ -1011,3 +1011,4 @@
 
 </body>
 </html>
+
