--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
         <i class="fas fa-user card-icon"></i>
         <h3 class="card-title">السيرة الذاتية</h3>
       </div>
-      <div class="card" style="animation-delay: 0.4s;" data-url="https://sites.google.com/view/3534rf/%D8%A7%D9%84%D9%85%D8%A4%D9%87%D9%84-%D8%A7%D9%84%D8%B9%D9%84%D9%85%D9%8A-%D9%88%D8%A7%D9%84%D8%AB%D8%AE%D8%A8%D8%B1%D8%A7%D8%AA?authuser=1">
+      <div class="card" style="animation-delay: 0.4s;" data-url="https://2u.pw/qBgUB">
         <i class="fas fa-graduation-cap card-icon"></i>
         <h3 class="card-title">المؤهل والخبرات</h3>
       </div>
@@ -763,7 +763,7 @@
         <i class="fas fa-medal card-icon"></i>
         <h3 class="card-title">المسابقات</h3>
       </div>
-      <div class="card" style="animation-delay: 0.65s;" data-url="https://sites.google.com/view/sdsgdfsb6/%D8%A8%D9%8A%D8%A7%D9%86%D8%A7%D8%AA-%D8%A8%D8%A7%D9%84%D8%B7%D9%84%D8%A7%D8%A8-%D8%A7%D9%84%D9%85%D8%AA%D9%81%D9%88%D9%82%D9%8A%D9%86-%D9%88%D8%A8%D8%B1%D8%A7%D9%85%D8%AC%D9%87%D9%86-%D8%A7%D9%84%D8%A7%D8%AB%D8%B1%D8%A7%D8%A6%D9%8A%D8%A9?authuser=1">
+      <div class="card" style="animation-delay: 0.65s;" data-url="https://2u.pw/lukd2">
         <i class="fas fa-school card-icon"></i>
         <h3 class="card-title">البيئة التعليمية</h3>
       </div>
@@ -785,7 +785,7 @@
         <i class="fas fa-chart-line card-icon"></i>
         <h3 class="card-title">سجلات المتابعة</h3>
       </div>
-      <div class="card" style="animation-delay: 0.1s;" data-url="https://sites.google.com/view/edsfvd45/%D8%A7%D9%84%D8%A7%D8%AE%D8%AA%D8%A7%D8%B1%D8%A7%D8%AA?authuser=1">
+      <div class="card" style="animation-delay: 0.1s;" data-url="https://2u.pw/WRQws">
         <i class="fas fa-check-circle card-icon"></i>
         <h3 class="card-title">الاختبارات</h3>
       </div>
@@ -793,7 +793,7 @@
         <i class="fas fa-chart-pie card-icon"></i>
         <h3 class="card-title">تحليل النتائج</h3>
       </div>
-      <div class="card" style="animation-delay: 0.2s;" data-url="https://sites.google.com/view/sdfdrttr4/%D8%A8%D9%8A%D8%A7%D9%86%D8%A7%D8%AA-%D8%A8%D8%A7%D9%84%D8%B7%D9%84%D8%A7%D8%A8-%D8%A7%D9%84%D9%85%D8%AA%D9%81%D9%88%D9%82%D9%8A%D9%86-%D9%88%D8%A8%D8%B1%D8%A7%D9%85%D8%AC%D9%87%D9%86-%D8%A7%D9%84%D8%A7%D8%AB%D8%B1%D8%A7%D8%A6%D9%8A%D8%A9?authuser=1&read_current=1">
+      <div class="card" style="animation-delay: 0.2s;" data-url="https://2u.pw/kOtVp">
         <i class="fas fa-user-graduate card-icon"></i>
         <h3 class="card-title">الطلاب المتفوقين</h3>
       </div>
@@ -1011,4 +1011,5 @@
 
 </body>
 </html>
+
 
