--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       background: var(--header-color);
       color: white;
       text-align: center;
-      padding: 2.8rem 1rem;
+      padding: 1.8rem 1rem; /* تم تقليل الارتفاع من 2.8rem */
       position: relative;
       border-bottom-left-radius: 25px;
       border-bottom-right-radius: 25px;
@@ -190,8 +190,8 @@
     }
 
     header h1 {
-      font-size: 2.2rem;
-      margin-bottom: 0.8rem;
+      font-size: 1.8rem; /* تم تصغير الحجم من 2.2rem */
+      margin-bottom: 0.6rem; /* تم تقليل المسافة */
       font-weight: 800;
       letter-spacing: -0.5px;
       text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
@@ -199,21 +199,22 @@
     }
 
     header p {
-      font-size: 1.15rem;
+      font-size: 1rem; /* تم تصغير الحجم من 1.15rem */
       opacity: 0.95;
       max-width: 800px;
       margin: 0 auto;
       font-weight: 400;
       letter-spacing: 0.6px;
       text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+      margin-bottom: 0.5rem; /* تم إضافة مسافة أسفل */
     }
 
     .compact-date {
       background: rgba(255, 255, 255, 0.25);
       display: inline-block;
-      padding: 10px 18px;
+      padding: 8px 16px; /* تم تقليل الحجم قليلاً */
       border-radius: 25px;
-      margin-top: 18px;
+      margin-top: 15px; /* تم تقليل المسافة من الأعلى */
       font-size: 0.95rem;
       backdrop-filter: blur(5px);
       border: 1px solid rgba(255, 255, 255, 0.3);
@@ -647,26 +648,27 @@
 
     @media (max-width: 480px) {
       header {
-        padding: 1.8rem 1rem;
+        padding: 1.5rem 1rem; /* تم تعديل الحجم للجوال */
         border-bottom-left-radius: 20px;
         border-bottom-right-radius: 20px;
       }
 
       header h1 {
-        font-size: 1.7rem !important;
-        margin-bottom: 0.5rem !important;
+        font-size: 1.5rem !important; /* تم تعديل الحجم للجوال */
+        margin-bottom: 0.4rem !important;
       }
       
       header p {
-        font-size: 1rem !important;
+        font-size: 0.9rem !important; /* تم تعديل الحجم للجوال */
         line-height: 1.5 !important;
-        margin-bottom: 0.8rem;
+        margin-bottom: 0.6rem;
       }
 
       .compact-date {
         font-size: 0.85rem !important;
-        padding: 8px 14px !important;
+        padding: 6px 12px !important; /* تم تعديل الحجم للجوال */
         white-space: nowrap;
+        margin-top: 10px; /* تم تقليل المسافة من الأعلى */
       }
       
       .compact-date .separator {
@@ -818,17 +820,17 @@
       </div>
       <div class="card" style="animation-delay: 0.25s;" data-url="https://sites.google.com/view/retgv3/%D8%B1%D8%A4%D9%8A%D8%A9-%D9%88%D8%B1%D8%B3%D8%A7%D9%84%D8%A9-%D8%A7%D9%84%D9%85%D8%AF%D8%B1%D8%B3%D8%A9?authuser=1">
         <i class="fas fa-school card-icon"></i>
-        <h3 class="card-title">رؤية ورسالة المدرسة</h3>
+        <h3 class="card-title">رؤية رسالة المدرسة</h3>
       </div>
       <div class="card" style="animation-delay: 0.3s;" data-url="https://sites.google.com/view/ererwq6/%D9%85%D9%87%D8%A7%D9%85-%D8%A7%D9%84%D9%85%D8%B9%D9%84%D9%85-%D9%88%D9%88%D8%A7%D8%AC%D8%A8%D8%A7%D8%AA%D8%A9?authuser=1">
         <i class="fas fa-tasks card-icon"></i>
-        <h3 class="card-title">مهام المعلم وواجباته</h3>
+        <h3 class="card-title">مهام المعلم </h3>
       </div>
-      <div class="card" style="animation-delay: 0.35s;" data-url="https://sites.google.com/view/we3rt/%D8%A7%D9%84%D8%B3%D9%8A%D8%B1%D8%A9-%D8%A7%D9%84%D8%B0%D8%A7%D8%AA%D9%8A%D8%A9-%D9%84%D9%84%D9%85%D8%B9%D9%84%D9%85?authuser=1">
+      <div class="card" style="animation-delay: 0.35s;" data-url="https://sites.google.com/view/we3rt/%D8%A7%D9%84%D8%B3%D9%8A%D8%B1%D8%A9-%D8%A7%D9%84%D8%B0%D8%A7%D8%AA%D9%8A%D8%A9-%D9%88%D9%84%D9%84%D9%85%D8%B9%D9%84%D9%85?authuser=1">
         <i class="fas fa-user card-icon"></i>
         <h3 class="card-title">السيرة الذاتية</h3>
       </div>
-      <div class="card" style="animation-delay: 0.4s;" data-url="https://sites.google.com/view/3534rf/%D8%A7%D9%84%D9%85%D8%A4%D9%87%D9%84-%D8%A7%D9%84%D8%B9%D9%84%D9%85%D9%8A-%D9%88%D8%A7%D9%84%D8%الج%D8%AE%D8%A8%D8%B1%D8%A7%D8%AA?authuser=1">
+      <div class="card" style="animation-delay: 0.4s;" data-url="https://sites.google.com/view/3534rf/%D8%A7%D9%84%D9%85%D8%A4%D9%87%D9%84-%D8%A7%D9%84%D8%B9%D9%84%D9%85%D9%8A-%D9%88%D8%A7%D9%84%D8%AC%D8%AE%D8%A8%D8%B1%D8%A7%D8%AA?authuser=1">
         <i class="fas fa-graduation-cap card-icon"></i>
         <h3 class="card-title">المؤهل والخبرات</h3>
       </div>
@@ -896,7 +898,7 @@
         <i class="fas fa-bullseye card-icon"></i>
         <h3 class="card-title">أهداف تعليم المادة</h3>
       </div>
-      <div class="card" style="animation-delay: 0.1s;" data-url="https://sites.google.com/view/sacsd/%D8%AC%D8%AF%D9%88%D9%84-%D8%A7%D9%84%D8%AD%D8%B5%D8%B5?authuser=1">
+      <div class="card" style="animation-delay: 0.1s;" data-url="https://sites.google.com/view/sacsd/%D8%AC%D8%AF%D9%88%D9%84-%D8%A7%D9%84%D8%AC%D8%B5%D8%B5?authuser=1">
         <i class="fas fa-calendar-alt card-icon"></i>
         <h3 class="card-title">جدول الحصص</h3>
       </div>
@@ -992,7 +994,7 @@
         <i class="fas fa-book card-icon"></i>
         <h3 class="card-title nowrap-text">الأول ثانوي</h3>
       </div>
-      <div class="card" style="animation-delay: 0.1s;" data-url="https://sites.google.com/view/dgvgrhbht76/%D8%A7%D9%84%D8%AB%D8%A7%D9%86%D9%8A-%D8%AB%D8%A7%D9%86%D9%88%D9%8A?authuser=1">
+      <div class="card" style="animation-delay: 0.1s;" data-url="https://sites.google.com/view/dgvgrhbht76/%D8%A7%D9%84%D8%AB%D8%A7%D9%86%D9%8A-%D8%ث%D8%A7%D9%86%D9%88%D9%8A?authuser=1">
         <i class="fas fa-book card-icon"></i>
         <h3 class="card-title nowrap-text">الثاني ثانوي</h3>
       </div>
@@ -1122,7 +1124,7 @@
       })
       .catch(error => {
         console.error('حدث خطأ:', error);
-        notificationContent.textContent = "مرحباً بكم في واجهة المعلم الرقمي .. أ.محمد حمدان الغامدي";
+        notificationContent.textContent = "مرحباً بكم في واجهة المعلم الرقمي .. أ.محمد حمدان الغامди";
         adjustScrollSpeed(50); // طول افتراضي
       });
   }
