--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       --primary-600: #5e3399;
       --primary-soft-1: #7B68EE;
       --primary-soft-2: #E6E6FA;
-      --header-color: #6A5ACD;
+      --header-color: #483D8B;
       --notification-color: #E6E6FA;
       --text-dark: #2c2c3a;
       --text-light: #5a527f;
@@ -783,7 +783,7 @@
 <header class="fade-in">
   <h1> واجهة المعلم الرقمي </h1>
   <p> أ. محمد حمدان الغامدي </p>
-  <p>نافذة لتوثيق الجهود المهنية ونشر المحتوى التعليمي للطلاب</p>
+  <p>توثيق  للجهود المهنية ونشر المحتوى التعليمي للطلاب</p>
   <!-- قسم التاريخ والوقت المضغوط -->
   <div class="compact-date" dir="rtl">
     <span id="hijri-date"></span> 
@@ -816,11 +816,11 @@
       </div>
       <div class="card" style="animation-delay: 0.2s;" data-url="https://sites.google.com/view/wsffew/%D8%B1%D8%A4%D9%8A%D8%A9-%D9%88%D8%B1%D8%B3%D8%A7%D9%84%D8%A9-%D8%A7%D9%84%D9%85%D8%B9%D9%84%D9%85?authuser=1">
         <i class="fas fa-eye card-icon"></i>
-        <h3 class="card-title">رؤية ورسالة المعلم</h3>
+        <h3 class="card-title">رؤية المعلم</h3>
       </div>
       <div class="card" style="animation-delay: 0.25s;" data-url="https://sites.google.com/view/retgv3/%D8%B1%D8%A4%D9%8A%D8%A9-%D9%88%D8%B1%D8%B3%D8%A7%D9%84%D8%A9-%D8%A7%D9%84%D9%85%D8%AF%D8%B1%D8%B3%D8%A9?authuser=1">
         <i class="fas fa-school card-icon"></i>
-        <h3 class="card-title">رؤية رسالة المدرسة</h3>
+        <h3 class="card-title">رؤية المدرسة</h3>
       </div>
       <div class="card" style="animation-delay: 0.3s;" data-url="https://sites.google.com/view/ererwq6/%D9%85%D9%87%D8%A7%D9%85-%D8%A7%D9%84%D9%85%D8%B9%D9%84%D9%85-%D9%88%D9%88%D8%A7%D8%AC%D8%A8%D8%A7%D8%AA%D8%A9?authuser=1">
         <i class="fas fa-tasks card-icon"></i>
