--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       --primary-600: #5e3399;
       --primary-soft-1: #7B68EE;
       --primary-soft-2: #E6E6FA;
-      --header-color: #483D8B;
+      --header-color: #9370DB;
       --notification-color: #E6E6FA;
       --text-dark: #2c2c3a;
       --text-light: #5a527f;
