--- a/index.html
+++ b/index.html
@@ -776,6 +776,12 @@
         padding: 6px 0; /* تم تقليل الارتفاع أكثر للشاشات الصغيرة */
       }
     }
+    /* إلغاء التموج الأبيض في الهيدر */
+header::before {
+  content: none !important;
+  background: none !important;
+}
+
   </style>
 </head>
 <body>
