--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       --primary-600: #5e3399;
       --primary-soft-1: #7B68EE;
       --primary-soft-2: #E6E6FA;
-      --header-color: #7B68EE;
+      --header-color: #5D3FD3;
       --notification-color: #E6E6FA;
       --text-dark: #2c2c3a;
       --text-light: #5a527f;
@@ -1243,3 +1243,4 @@ header::before {
 
 </body>
 </html>
+
