--- a/index.html
+++ b/index.html
@@ -936,21 +936,21 @@
       </div>
       <div class="card" style="animation-delay: 0.2s;" data-url="https://sites.google.com/view/wsffew/%D8%B1%D8%A4%D9%8A%D8%A9-%D9%88%D8%B1%D8%B3%D8%A7%D9%84%D8%A9-%D8%A7%D9%84%D9%85%D8%B9%D9%84%D9%85?authuser=1">
         <i class="fas fa-eye card-icon"></i>
-        <h3 class="card-title">رؤية المعلم</h3>
+        <h3 class="card-title">رؤية ورسالة المعلم</h3>
       </div>
       <div class="card" style="animation-delay: 0.25s;" data-url="https://sites.google.com/view/retgv3/%D8%B1%D8%A4%D9%8A%D8%A9-%D9%88%D8%B1%D8%B3%D8%A7%D9%84%D8%A9-%D8%A7%D9%84%D9%85%D8%AF%D8%B1%D8%B3%D8%A9?authuser=1">
         <i class="fas fa-school card-icon"></i>
-        <h3 class="card-title">رؤية المدرسة</h3>
+        <h3 class="card-title">رؤية ورسالة المدرسة</h3>
       </div>
       <div class="card" style="animation-delay: 0.3s;" data-url="https://sites.google.com/view/ererwq6/%D9%85%D9%87%D8%A7%D9%85-%D8%A7%D9%84%D9%85%D8%B9%D9%84%D9%85-%D9%88%D9%88%D8%A7%D8%AC%D8%A8%D8%A7%D8%AA%D8%A9?authuser=1">
         <i class="fas fa-tasks card-icon"></i>
         <h3 class="card-title">مهام المعلم </h3>
       </div>
-      <div class="card" style="animation-delay: 0.35s;" data-url="https://sites.google.com/view/we3rt/%D8%A7%D9%84%D8%B3%D9%8A%D8%B1%D8%A9-%D8%A7%D9%84%D8%B0%D8%A7%D8%AA%D9%8A%D8%A9-%D9%88%D9%84%D9%84%D9%85%D8%B9%D9%84%D9%85?authuser=1">
+      <div class="card" style="animation-delay: 0.35s;" data-url="https://2u.pw/MIJW7">
         <i class="fas fa-user card-icon"></i>
         <h3 class="card-title">السيرة الذاتية</h3>
       </div>
-      <div class="card" style="animation-delay: 0.4s;" data-url="https://sites.google.com/view/3534rf/%D8%A7%D9%84%D9%85%D8%A4%D9%87%D9%84-%D8%A7%D9%84%D8%B9%D9%84%D9%85%D9%8A-%D9%88%D8%A7%D9%84%D8%AC%D8%AE%D8%A8%D8%B1%D8%A7%D8%AA?authuser=1">
+      <div class="card" style="animation-delay: 0.4s;" data-url="https://2u.pw/qBgUB">
         <i class="fas fa-graduation-cap card-icon"></i>
         <h3 class="card-title">المؤهل والخبرات</h3>
       </div>
@@ -964,11 +964,11 @@
       التنمية المهنية
     </h2>
     <div class="cards-container">
-      <div class="card" style="animation-delay: 0.05s;" data-url="https://sites.google.com/view/aser2w/%D8%A7%D9%84%D8%AF%D9%88%D8%B1%D8%A7%D8%AA-%D8%A7%D9%84%D8%AA%D8%AF%D9%8A%D8%B1%D9%8A%D8%A9?authuser=1">
+      <div class="card" style="animation-delay: 0.05s;" data-url="https://2u.pw/BAW2J">
         <i class="fas fa-chalkboard-teacher card-icon"></i>
         <h3 class="card-title">الدورات التدريبية</h3>
       </div>
-      <div class="card" style="animation-delay: 0.1s;" data-url="https://sites.google.com/view/erfedf43/%D8%A7%D9%86%D8%AC%D8%A7%D8%B2%D8%A7%D8%AA?authuser=1">
+      <div class="card" style="animation-delay: 0.1s;" data-url="https://2u.pw/gptCL">
         <i class="fas fa-award card-icon"></i>
         <h3 class="card-title">الإنجازات</h3>
       </div>
@@ -1018,7 +1018,7 @@
         <i class="fas fa-bullseye card-icon"></i>
         <h3 class="card-title">أهداف تعليم المادة</h3>
       </div>
-      <div class="card" style="animation-delay: 0.1s;" data-url="https://sites.google.com/view/sacsd/%D8%AC%D8%AF%D9%88%D9%84-%D8%A7%D9%84%D8%AC%D8%B5%D8%B5?authuser=1">
+      <div class="card" style="animation-delay: 0.1s;" data-url="https://2u.pw/87pol">
         <i class="fas fa-calendar-alt card-icon"></i>
         <h3 class="card-title">جدول الحصص</h3>
       </div>
@@ -1026,7 +1026,7 @@
         <i class="fas fa-book card-icon"></i>
         <h3 class="card-title">توزيع المنهج</h3>
       </div>
-      <div class="card" style="animation-delay: 0.2s;" data-url="https://sites.google.com/view/sdf6664rf/%D8%A7%D9%84%D8%AE%D8%B7%D8%A9-%D8%A7%D9%84%D8%B2%D9%85%D9%86%D9%8A%D8%A9?authuser=1">
+      <div class="card" style="animation-delay: 0.2s;" data-url="https://2u.pw/wB9kO">
         <i class="fas fa-calendar-week card-icon"></i>
         <h3 class="card-title">الخطة الزمنية</h3>
       </div>
@@ -1042,15 +1042,15 @@
         <i class="fas fa-file-powerpoint card-icon"></i>
         <h3 class="card-title">عروض تقديمية</h3>
       </div>
-      <div class="card" style="animation-delay: 0.4s;" data-url="https://sites.google.com/view/sdgvt6/%D8%A7%D9%88%D8%B1%D8%A7%D9%82-%D8%A7%D9%84%D8%B9%D9%85%D9%84?authuser=1">
+      <div class="card" style="animation-delay: 0.4s;" data-url="https://2u.pw/4ysDC">
         <i class="fas fa-file-alt card-icon"></i>
         <h3 class="card-title">أوراق العمل</h3>
       </div>
-      <div class="card" style="animation-delay: 0.45s;" data-url="https://sites.google.com/view/dvfdg33/%D8%A7%D8%B3%D8%AA%D8%B1%D8%A7%D8%AA%D9%8A%D8%AC%D9%8A%D8%A7%D8%AA-%D8%AA%D8%AF%D8%B1%D9%8A%D8%B9?authuser=1">
+      <div class="card" style="animation-delay: 0.45s;" data-url="https://2u.pw/0c9lY">
         <i class="fas fa-lightbulb card-icon"></i>
-        <h3 class="card-title">استراتيجيات التدريس</h3>
+        <h3 class="card-title">استراتيجيات حديثة</h3>
       </div>
-      <div class="card" style="animation-delay: 0.5s;" data-url="https://sites.google.com/view/dfg6654e/%D8%AA%D9%81%D8%A7%D8%B9%D9%84%D8%A7%D8%AA-%D8%B7%D9%84%D8%A7%D8%A8">
+      <div class="card" style="animation-delay: 0.5s;" data-url="https://2u.pw/3Y7Uw">
         <i class="fas fa-comments card-icon"></i>
         <h3 class="card-title">تفاعلات الطلاب</h3>
       </div>
@@ -1062,11 +1062,11 @@
         <i class="fas fa-medal card-icon"></i>
         <h3 class="card-title">المسابقات</h3>
       </div>
-      <div class="card" style="animation-delay: 0.65s;" data-url="https://sites.google.com/view/sdsgdfsb6/%D8%A8%D9%8A%D8%A7%D9%86%D8%A7%D8%AA-%D8%B7%D9%84%D8%A7%D8%A8-%D9%85%D8%AA%D9%81%D9%88%D9%82%D9%8A%D9%86-%D8%A8%D8%B1%D8%A7%D9%85%D8%AC-%D8%A7%D8%AB%D8%B1%D8%A7%D8%A6%D9%8A%D8%A9?authuser=1">
+      <div class="card" style="animation-delay: 0.65s;" data-url="https://2u.pw/lukd2">
         <i class="fas fa-school card-icon"></i>
         <h3 class="card-title">البيئة التعليمية</h3>
       </div>
-      <div class="card" style="animation-delay: 0.7s;" data-url="https://sites.google.com/view/sdergrt7/%D8%AF%D9%85%D8%AC-%D8%AA%D9%82%D9%86%D9%8A%D8%A9-%D9%81%D9%8A-%D8%AA%D8%B9%D9%84%D9%8A%D9%85">
+      <div class="card" style="animation-delay: 0.7s;" data-url="https://2u.pw/d5HojP">
         <i class="fas fa-laptop-code card-icon"></i>
         <h3 class="card-title">التقنية والتعليم</h3>
       </div>
