--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
       </div>
       <div class="card" style="animation-delay: 0.25s;" data-url="https://sites.google.com/view/retgv3/%D8%B1%D8%A4%D9%8A%D8%A9-%D9%88%D8%B1%D8%B3%D8%A7%D9%84%D8%A9-%D8%A7%D9%84%D9%85%D8%AF%D8%B1%D8%B3%D8%A9?authuser=1">
         <i class="fas fa-school card-icon"></i>
-        <h3 class="card-title">رؤية ورسالة المدرسة</h3>
+        <h3 class="card-title">رؤية وتوجه المدرسة</h3>
       </div>
       <div class="card" style="animation-delay: 0.3s;" data-url="https://sites.google.com/view/ererwq6/%D9%85%D9%87%D8%A7%D9%85-%D8%A7%D9%84%D9%85%D8%B9%D9%84%D9%85-%D9%88%D9%88%D8%A7%D8%AC%D8%A8%D8%A7%D8%AA%D8%A9?authuser=1">
         <i class="fas fa-tasks card-icon"></i>
@@ -1080,23 +1080,23 @@
       تقويم الطلاب
     </h2>
     <div class="cards-container">
-      <div class="card" style="animation-delay: 0.05s;" data-url="https://sites.google.com/view/ghgv54/%D8%B3%D8%AC%D9%84%D8%A7%D8%AA-%D9%85%D8%AA%D8%A7%D8%A8%D8%B9%D8%A9-%D8%B7%D9%84%D8%A7%D8%A8?authuser=1">
+      <div class="card" style="animation-delay: 0.05s;" data-url="https://2u.pw/QrJim">
         <i class="fas fa-chart-line card-icon"></i>
         <h3 class="card-title">سجلات المتابعة</h3>
       </div>
-      <div class="card" style="animation-delay: 0.1s;" data-url="https://sites.google.com/view/edsfvd45/%D8%A7%D8%AE%D8%AA%D8%A8%D8%A7%D8%B1%D8%A7%D8%AA?authuser=1">
+      <div class="card" style="animation-delay: 0.1s;" data-url="https://2u.pw/WRQws">
         <i class="fas fa-check-circle card-icon"></i>
         <h3 class="card-title">الاختبارات</h3>
       </div>
-      <div class="card" style="animation-delay: 0.15s;" data-url="https://sites.google.com/view/sdfcdrt66/%D8%AA%D8%AD%D9%84%D9%8A%D9%84-%D9%86%D8%AA%D8%A7%D8%A6%D8%AC-%D8%B7%D9%84%D8%A7%D8%A8?authuser=1">
+      <div class="card" style="animation-delay: 0.15s;" data-url="https://2u.pw/JY36se">
         <i class="fas fa-chart-pie card-icon"></i>
         <h3 class="card-title">تحليل النتائج</h3>
       </div>
-      <div class="card" style="animation-delay: 0.2s;" data-url="https://sites.google.com/view/sdfdrttr4/%D8%A8%D9%8A%D8%A7%D9%86%D8%A7%D8%AA-%D8%B7%D9%84%D8%A7%D8%A8-%D9%85%D8%AA%D9%81%D9%88%D9%82%D9%8A%D9%86-%D8%A8%D8%B1%D8%A7%D9%85%D8%AC-%D8%AC%D8%AB%D8%B1%D8%A7%D8%A6%D9%8A%D8%A9?authuser=1&read_current=1">
+      <div class="card" style="animation-delay: 0.2s;" data-url="https://2u.pw/kOtVp">
         <i class="fas fa-user-graduate card-icon"></i>
         <h3 class="card-title">الطلاب المتفوقين</h3>
       </div>
-      <div class="card" style="animation-delay: 0.25s;" data-url="https://sites.google.com/view/drhfbtrh55/%D8%A8%D9%8A%D8%A7%D9%86-%D8%B7%D9%84%D8%A7%D8%A8-%D8%B6%D8%B9%D8%A7%D9%81-%D8%A8%D8%B1%D8%A7%D9%85%D8%AC-%D8%B9%D9%84%D8%A7%D8%AC%D9%8A%D8%A9?authuser=1">
+      <div class="card" style="animation-delay: 0.25s;" data-url="https://2u.pw/YNoFA">
         <i class="fas fa-user-friends card-icon"></i>
         <h3 class="card-title">الطلاب الضعاف</h3>
       </div>
@@ -1110,15 +1110,15 @@
       مكتبة الطالب
     </h2>
     <div class="cards-container">
-      <div class="card" style="animation-delay: 0.05s;" data-url="https://sites.google.com/view/dvdf55/%D8%A3%D9%88%D9%84-%D8%AB%D8%A7%D9%86%D9%88%D9%8A">
+      <div class="card" style="animation-delay: 0.05s;" data-url="https://2u.pw/OODH7">
         <i class="fas fa-book card-icon"></i>
         <h3 class="card-title nowrap-text">الأول ثانوي</h3>
       </div>
-      <div class="card" style="animation-delay: 0.1s;" data-url="https://sites.google.com/view/dgvgrhbht76/%D8%A7%D9%84%D8%ث%D8%A7%D9%86%D9%8A-%D8%AB%D8%A7%D9%86%D9%88%D9%8A?authuser=1">
+      <div class="card" style="animation-delay: 0.1s;" data-url="https://2u.pw/TW38i">
         <i class="fas fa-book card-icon"></i>
         <h3 class="card-title nowrap-text">الثاني ثانوي</h3>
       </div>
-      <div class="card" style="animation-delay: 0.15s;" data-url="https://sites.google.com/view/regf78/%D8%A7%D9%84%D8%AB%D8%A7%D9%84%D8%AB-%D8%AB%D8%A7%D9%86%D9%88%D9%8A?authuser=1">
+      <div class="card" style="animation-delay: 0.15s;" data-url="https://2u.pw/qSQMx">
         <i class="fas fa-book card-icon"></i>
         <h3 class="card-title nowrap-text">الثالث ثانوي</h3>
       </div>
@@ -1132,7 +1132,7 @@
       الاثراء التقني
     </h2>
     <div class="cards-container">
-      <div class="card" style="animation-delay: 0.05s;" data-url="https://sites.google.com/view/sdfgbdh77/%D9%83%D8%AA%D8%A8-%D8%AA%D9%82%D9%86%D9%8A%D8%A9">
+      <div class="card" style="animation-delay: 0.05s;" data-url="https://2u.pw/f7eDE">
         <i class="fas fa-book card-icon"></i>
         <h3 class="card-title">كتب التقنية</h3>
       </div>
