--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
       </div>
       <div class="card" style="animation-delay: 0.25s;" data-url="https://sites.google.com/view/retgv3/%D8%B1%D8%A4%D9%8A%D8%A9-%D9%88%D8%B1%D8%B3%D8%A7%D9%84%D8%A9-%D8%A7%D9%84%D9%85%D8%AF%D8%B1%D8%B3%D8%A9?authuser=1">
         <i class="fas fa-school card-icon"></i>
-        <h3 class="card-title">رؤية وتوجه المدرسة</h3>
+        <h3 class="card-title">رؤية المدرسة</h3>
       </div>
       <div class="card" style="animation-delay: 0.3s;" data-url="https://sites.google.com/view/ererwq6/%D9%85%D9%87%D8%A7%D9%85-%D8%A7%D9%84%D9%85%D8%B9%D9%84%D9%85-%D9%88%D9%88%D8%A7%D8%AC%D8%A8%D8%A7%D8%AA%D8%A9?authuser=1">
         <i class="fas fa-tasks card-icon"></i>
@@ -1344,3 +1344,4 @@
 
 </body>
 </html>
+
