--- a/index.html
+++ b/index.html
@@ -91,19 +91,13 @@
     }
 
     @keyframes scroll {
-      0% { 
-        transform: translateX(100%); 
-      }
-      5% {
-        transform: translateX(100%);
-      }
-      95% {
-        transform: translateX(-100%);
-      }
-      100% { 
-        transform: translateX(-100%);
-      }
-    }
+  0% { 
+    transform: translateX(0); 
+  }
+  100% { 
+    transform: translateX(100%);
+  }
+}
 
     @keyframes ring {
       0% { transform: rotate(0); }
@@ -1344,4 +1338,5 @@
 
 </body>
 </html>
+
 
