--- a/index.html
+++ b/index.html
@@ -944,7 +944,7 @@
         <i class="fas fa-user card-icon"></i>
         <h3 class="card-title">السيرة الذاتية</h3>
       </div>
-      <div class="card" style="animation-delay: 0.4s;" data-url="https://2u.pw/qBgUB">
+      <div class="card" style="animation-delay: 0.4s;" data-url="https://sites.google.com/view/3534rf/home?authuser=1">
         <i class="fas fa-graduation-cap card-icon"></i>
         <h3 class="card-title">المؤهل والخبرات</h3>
       </div>
