--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
         <i class="fas fa-tasks card-icon"></i>
         <h3 class="card-title">مهام المعلم </h3>
       </div>
-      <div class="card" style="animation-delay: 0.35s;" data-url="https://2u.pw/MIJW7">
+      <div class="card" style="animation-delay: 0.35s;" data-url="https://sites.google.com/view/we3rt/home?authuser=1">
         <i class="fas fa-user card-icon"></i>
         <h3 class="card-title">السيرة الذاتية</h3>
       </div>
@@ -958,11 +958,11 @@
       التنمية المهنية
     </h2>
     <div class="cards-container">
-      <div class="card" style="animation-delay: 0.05s;" data-url="https://2u.pw/BAW2J">
+      <div class="card" style="animation-delay: 0.05s;" data-url="https://sites.google.com/view/aser2w/home?authuser=1">
         <i class="fas fa-chalkboard-teacher card-icon"></i>
         <h3 class="card-title">الدورات التدريبية</h3>
       </div>
-      <div class="card" style="animation-delay: 0.1s;" data-url="https://2u.pw/gptCL">
+      <div class="card" style="animation-delay: 0.1s;" data-url="https://sites.google.com/view/erfedf43/m?authuser=1">
         <i class="fas fa-award card-icon"></i>
         <h3 class="card-title">الإنجازات</h3>
       </div>
@@ -1012,7 +1012,7 @@
         <i class="fas fa-bullseye card-icon"></i>
         <h3 class="card-title">أهداف تعليم المادة</h3>
       </div>
-      <div class="card" style="animation-delay: 0.1s;" data-url="https://2u.pw/87pol">
+      <div class="card" style="animation-delay: 0.1s;" data-url="https://sites.google.com/view/sacsd/dc?authuser=1">
         <i class="fas fa-calendar-alt card-icon"></i>
         <h3 class="card-title">جدول الحصص</h3>
       </div>
@@ -1020,7 +1020,7 @@
         <i class="fas fa-book card-icon"></i>
         <h3 class="card-title">توزيع المنهج</h3>
       </div>
-      <div class="card" style="animation-delay: 0.2s;" data-url="https://2u.pw/wB9kO">
+      <div class="card" style="animation-delay: 0.2s;" data-url="https://sites.google.com/view/sdf6664rf/fg?authuser=1">
         <i class="fas fa-calendar-week card-icon"></i>
         <h3 class="card-title">الخطة الزمنية</h3>
       </div>
@@ -1036,15 +1036,15 @@
         <i class="fas fa-file-powerpoint card-icon"></i>
         <h3 class="card-title">عروض تقديمية</h3>
       </div>
-      <div class="card" style="animation-delay: 0.4s;" data-url="https://2u.pw/4ysDC">
+      <div class="card" style="animation-delay: 0.4s;" data-url="https://sites.google.com/view/sdgvt6/sw?authuser=1">
         <i class="fas fa-file-alt card-icon"></i>
         <h3 class="card-title">أوراق العمل</h3>
       </div>
-      <div class="card" style="animation-delay: 0.45s;" data-url="https://2u.pw/0c9lY">
+      <div class="card" style="animation-delay: 0.45s;" data-url="https://sites.google.com/view/dvfdg33/ss?authuser=1">
         <i class="fas fa-lightbulb card-icon"></i>
         <h3 class="card-title">استراتيجيات حديثة</h3>
       </div>
-      <div class="card" style="animation-delay: 0.5s;" data-url="https://2u.pw/3Y7Uw">
+      <div class="card" style="animation-delay: 0.5s;" data-url="https://sites.google.com/view/dfg6654e/we?authuser=1">
         <i class="fas fa-comments card-icon"></i>
         <h3 class="card-title">تفاعلات الطلاب</h3>
       </div>
@@ -1056,11 +1056,11 @@
         <i class="fas fa-medal card-icon"></i>
         <h3 class="card-title">المسابقات</h3>
       </div>
-      <div class="card" style="animation-delay: 0.65s;" data-url="https://2u.pw/lukd2">
+      <div class="card" style="animation-delay: 0.65s;" data-url="https://sites.google.com/view/sdsgdfsb6/ee?authuser=1">
         <i class="fas fa-school card-icon"></i>
         <h3 class="card-title">البيئة التعليمية</h3>
       </div>
-      <div class="card" style="animation-delay: 0.7s;" data-url="https://2u.pw/d5HojP">
+      <div class="card" style="animation-delay: 0.7s;" data-url="https://sites.google.com/view/sdergrt7/xc?authuser=1">
         <i class="fas fa-laptop-code card-icon"></i>
         <h3 class="card-title">التقنية والتعليم</h3>
       </div>
@@ -1339,6 +1339,7 @@ function adjustScrollSpeed(textLength) {
 
 </body>
 </html>
+
 
 
 
