--- a/index.html
+++ b/index.html
@@ -1074,23 +1074,23 @@
       تقويم الطلاب
     </h2>
     <div class="cards-container">
-      <div class="card" style="animation-delay: 0.05s;" data-url="https://2u.pw/QrJim">
+      <div class="card" style="animation-delay: 0.05s;" data-url="https://sites.google.com/view/ghgv54/q?authuser=1">
         <i class="fas fa-chart-line card-icon"></i>
         <h3 class="card-title">سجلات المتابعة</h3>
       </div>
-      <div class="card" style="animation-delay: 0.1s;" data-url="https://2u.pw/WRQws">
+      <div class="card" style="animation-delay: 0.1s;" data-url="https://sites.google.com/view/edsfvd45/aw?authuser=1">
         <i class="fas fa-check-circle card-icon"></i>
         <h3 class="card-title">الاختبارات</h3>
       </div>
-      <div class="card" style="animation-delay: 0.15s;" data-url="https://2u.pw/JY36se">
+      <div class="card" style="animation-delay: 0.15s;" data-url="https://sites.google.com/view/sdfcdrt66/zx?authuser=1">
         <i class="fas fa-chart-pie card-icon"></i>
         <h3 class="card-title">تحليل النتائج</h3>
       </div>
-      <div class="card" style="animation-delay: 0.2s;" data-url="https://2u.pw/kOtVp">
+      <div class="card" style="animation-delay: 0.2s;" data-url="https://sites.google.com/view/sdfdrttr4/ed?authuser=1">
         <i class="fas fa-user-graduate card-icon"></i>
         <h3 class="card-title">الطلاب المتفوقين</h3>
       </div>
-      <div class="card" style="animation-delay: 0.25s;" data-url="https://2u.pw/YNoFA">
+      <div class="card" style="animation-delay: 0.25s;" data-url="https://sites.google.com/view/drhfbtrh55/bn?authuser=1">
         <i class="fas fa-user-friends card-icon"></i>
         <h3 class="card-title">الطلاب الضعاف</h3>
       </div>
@@ -1104,15 +1104,15 @@
       مكتبة الطالب
     </h2>
     <div class="cards-container">
-      <div class="card" style="animation-delay: 0.05s;" data-url="https://2u.pw/OODH7">
+      <div class="card" style="animation-delay: 0.05s;" data-url="https://sites.google.com/view/dvdf55/ss?authuser=1">
         <i class="fas fa-book card-icon"></i>
         <h3 class="card-title nowrap-text">الأول ثانوي</h3>
       </div>
-      <div class="card" style="animation-delay: 0.1s;" data-url="https://2u.pw/TW38i">
+      <div class="card" style="animation-delay: 0.1s;" data-url="https://sites.google.com/view/dgvgrhbht76/hj?authuser=1">
         <i class="fas fa-book card-icon"></i>
         <h3 class="card-title nowrap-text">الثاني ثانوي</h3>
       </div>
-      <div class="card" style="animation-delay: 0.15s;" data-url="https://2u.pw/qSQMx">
+      <div class="card" style="animation-delay: 0.15s;" data-url="https://sites.google.com/view/regf78/ut?authuser=1">
         <i class="fas fa-book card-icon"></i>
         <h3 class="card-title nowrap-text">الثالث ثانوي</h3>
       </div>
@@ -1126,15 +1126,15 @@
       الاثراء التقني
     </h2>
     <div class="cards-container">
-      <div class="card" style="animation-delay: 0.05s;" data-url="https://2u.pw/f7eDE">
+      <div class="card" style="animation-delay: 0.05s;" data-url="https://sites.google.com/view/sdfgbdh77/wc?authuser=1">
         <i class="fas fa-book card-icon"></i>
         <h3 class="card-title">كتب التقنية</h3>
       </div>
-      <div class="card" style="animation-delay: 0.1s;" data-url="https://sites.google.com/view/sdfgdf6/%D8%A7%D9%86%D9%81%D9%88%D8%AC%D8%B1%D8%A7%D9%81%D9%8A%D9%83?authuser=1">
+      <div class="card" style="animation-delay: 0.1s;" data-url="https://sites.google.com/view/sdfgdf6/vm?authuser=1">
         <i class="fas fa-image card-icon"></i>
         <h3 class="card-title">إنفوجرافيك</h3>
       </div>
-      <div class="card" style="animation-delay: 0.15s;" data-url="https://sites.google.com/view/sdfh77/%D9%81%D9%8A%D8%AF%D9%8A%D9%88%D9%87%D8%A7%D8%AA-%D9%85%D8%AE%D8%AA%D8%B5%D8%B1%D8%A9?authuser=1">
+      <div class="card" style="animation-delay: 0.15s;" data-url="https://sites.google.com/view/sdfh77/rt?authuser=1">
         <i class="fas fa-video card-icon"></i>
         <h3 class="card-title">فيديوهات قصيرة</h3>
       </div>
@@ -1339,6 +1339,7 @@ function adjustScrollSpeed(textLength) {
 
 </body>
 </html>
+
 
 
 
