--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>واجهـة المعلـم الرقمـي  </title>
-  <meta name="description" content="موقع أ.محمد الغامدي .. توثيق الجهود المهنية ونشر المحتوى التعليمي للطلاب.        ">
+  <meta name="description" content="موقع أ.محمد الغامدي - توثيق الجهود المهنية ونشر المحتوى التعليمي للطلاب.        ">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <style>
@@ -1339,6 +1339,7 @@ function adjustScrollSpeed(textLength) {
 
 </body>
 </html>
+
 
 
 
