--- a/index.html
+++ b/index.html
@@ -1031,17 +1031,19 @@
   </div>
 </div>
 
-<header class="fade-in">
-  <h1> واجهة المعلم الرقمي </h1>
-  <p> أ. محمد حمدان الغامدي </p>
-  <p>توثيق  للجهود المهنية ونشر المحتوى التعليمي للطلاب</p>
-  <!-- قسم التاريخ والوقت المضغوط -->
-  <div class="compact-date" dir="rtl">
-    <span id="hijri-date"></span> 
-    <span class="separator">•</span>
-    <span id="gregorian-date"></span>
-    <span class="separator">•</span>
-    <span id="live-time"></span>
+<header class="fade-in" style="background: transparent; box-shadow: none; padding: 0; position: relative;">
+  <img src="images/hh.png" alt="واجهة المعلم الرقمي - أ. محمد حمدان الغامدي" 
+       class="responsive-header" style="width: 100%; height: auto; display: block;">
+  
+  <!-- قسم التاريخ والوقت داخل الإطار -->
+  <div style="text-align: center; position: absolute; bottom: 2%; left: 50%; transform: translateX(-50%); width: 80%; max-width: 400px; z-index: 2;">
+    <div class="compact-date" dir="rtl" style="background: #d6cdeb; color: #000000; border: 2px solid #632cde; padding: 12px 25px; border-radius: 25px; box-shadow: 0 4px 15px rgba(0,0,0,0.15); font-weight: 600;">
+      <span id="hijri-date"></span> 
+      <span class="separator" style="color: #632cde; margin: 0 10px; font-weight: bold;">•</span>
+      <span id="gregorian-date"></span>
+      <span class="separator" style="color: #632cde; margin: 0 10px; font-weight: bold;">•</span>
+      <span id="live-time"></span>
+    </div>
   </div>
 </header>
 <!-- شريط البحث الجديد -->
@@ -1573,6 +1575,7 @@ initSearch();
 
 </body>
 </html>
+
 
 
 
