--- a/index.html
+++ b/index.html
@@ -1014,6 +1014,30 @@
     font-size: 0.9rem;
   }
 }
+    @media (max-width: 480px) {
+  .responsive-header {
+    height: 200px !important; /* أقل قليلاً للجوال */
+    min-height: 200px;
+  }
+  
+  .compact-date {
+    font-size: 0.8rem !important;
+    padding: 6px 12px !important;
+    max-width: 300px !important;
+    bottom: 15px !important;
+  }
+}
+
+@media (max-width: 360px) {
+  .responsive-header {
+    height: 180px !important;
+  }
+  
+  .compact-date {
+    font-size: 0.75rem !important;
+    padding: 5px 10px !important;
+  }
+}
   </style>
 </head>
 <body>
@@ -1031,17 +1055,18 @@
   </div>
 </div>
 
+<!-- الهيدر المعدل ليتناسب مع أبعاد 1500x250 -->
 <header class="fade-in" style="background: transparent; box-shadow: none; padding: 0; position: relative;">
   <img src="images/hh.png" alt="واجهة المعلم الرقمي - أ. محمد حمدان الغامدي" 
-       class="responsive-header" style="width: 100%; height: auto; display: block;">
+       class="responsive-header" style="width: 100%; height: 250px; object-fit: cover; display: block;">
   
-  <!-- قسم التاريخ والوقت داخل الإطار -->
-  <div style="text-align: center; position: absolute; bottom: 2%; left: 50%; transform: translateX(-50%); width: 80%; max-width: 400px; z-index: 2;">
-    <div class="compact-date" dir="rtl" style="background: #d6cdeb; color: #000000; border: 2px solid #632cde; padding: 12px 25px; border-radius: 25px; box-shadow: 0 4px 15px rgba(0,0,0,0.15); font-weight: 600;">
+  <!-- قسم التاريخ والوقت مصغر -->
+  <div style="text-align: center; position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); width: 90%; max-width: 350px; z-index: 2;">
+    <div class="compact-date" dir="rtl" style="background: #d6cdeb; color: #000000; border: 2px solid #632cde; padding: 8px 15px; border-radius: 20px; box-shadow: 0 4px 15px rgba(0,0,0,0.15); font-weight: 600; font-size: 0.9rem;">
       <span id="hijri-date"></span> 
-      <span class="separator" style="color: #632cde; margin: 0 10px; font-weight: bold;">•</span>
+      <span class="separator" style="color: #632cde; margin: 0 8px; font-weight: bold;">•</span>
       <span id="gregorian-date"></span>
-      <span class="separator" style="color: #632cde; margin: 0 10px; font-weight: bold;">•</span>
+      <span class="separator" style="color: #632cde; margin: 0 8px; font-weight: bold;">•</span>
       <span id="live-time"></span>
     </div>
   </div>
@@ -1575,6 +1600,7 @@ initSearch();
 
 </body>
 </html>
+
 
 
 
