--- a/index.html
+++ b/index.html
@@ -1056,21 +1056,20 @@
 </div>
 
 <!-- الهيدر المعدل ليتناسب مع أبعاد 1500x250 -->
-<header class="fade-in" style="background: transparent; box-shadow: none; padding: 0; position: relative;">
-  <img src="images/hh.png" alt="واجهة المعلم الرقمي - أ. محمد حمدان الغامدي" 
-       class="responsive-header" style="width: 100%; height: 250px; object-fit: cover; display: block;">
-  
-  <!-- قسم التاريخ والوقت مصغر -->
-  <div style="text-align: center; position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); width: 90%; max-width: 350px; z-index: 2;">
-    <div class="compact-date" dir="rtl" style="background: #d6cdeb; color: #000000; border: 2px solid #632cde; padding: 8px 15px; border-radius: 20px; box-shadow: 0 4px 15px rgba(0,0,0,0.15); font-weight: 600; font-size: 0.9rem;">
-      <span id="hijri-date"></span> 
-      <span class="separator" style="color: #632cde; margin: 0 8px; font-weight: bold;">•</span>
-      <span id="gregorian-date"></span>
-      <span class="separator" style="color: #632cde; margin: 0 8px; font-weight: bold;">•</span>
-      <span id="live-time"></span>
+<header class="fade-in" style="background: transparent; box-shadow: none; padding: 0; position: relative; overflow: hidden;">
+    <img src="images/hh.png" alt="واجهة المعلم الرقمي - أ. محمد حمدان الغامدي" class="responsive-header" style="width: 100%; height: auto; object-fit: contain; display: block;">
+    <!-- قسم التاريخ والوقت مصغر -->
+    <div style="text-align: center; position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); width: 90%; max-width: 350px; z-index: 2;">
+        <div class="compact-date" dir="rtl" style="background: #d6cdeb; color: #000000; border: 2px solid #632cde; padding: 8px 15px; border-radius: 20px; box-shadow: 0 4px 15px rgba(0,0,0,0.15); font-weight: 600; font-size: 0.9rem;">
+            <span id="hijri-date"></span>
+            <span class="separator" style="color: #632cde; margin: 0 8px; font-weight: bold;">•</span>
+            <span id="gregorian-date"></span>
+            <span class="separator" style="color: #632cde; margin: 0 8px; font-weight: bold;">•</span>
+            <span id="live-time"></span>
+        </div>
     </div>
-  </div>
 </header>
+
 <!-- شريط البحث الجديد -->
 <div class="search-container fade-in">
   <div class="search-box">
@@ -1600,6 +1599,7 @@ initSearch();
 
 </body>
 </html>
+
 
 
 
